--- a/aula 3/revisao.ipynb
+++ b/aula 3/revisao.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -93,8 +93,10 @@
    ],
    "source": [
     "x = 0\n",
-    "for i in range(0,101):\n",
-    "    x = x+i \n",
+    "i = 0\n",
+    "while i <= 100:\n",
+    "    x = x + i \n",
+    "    i = i + 1\n",
     "print(x)"
    ]
   }
