--- a/ex-entregaveis/arrays-ruty-ribeiro-pena.ipynb
+++ b/ex-entregaveis/arrays-ruty-ribeiro-pena.ipynb
@@ -4,21 +4,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prática com funções\n",
+    "# Prática com arrays no numpy\n",
     "\n",
     "### 1º Exercício\n",
-    "Escrever função para calcular o fatorial de um número qualquer."
+    "    Gerar um array aleatório de 100 elementos, calcular mediana correspondente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A mediana do array: \n",
+      "\n",
+      "[ 907431827 1591738560 1455442111 1164810699  246157657  459321000\n",
+      "  711444904  340564964  804674235 1295308967 1880067821  141095030\n",
+      " 1613544540   36438625 1006942525 1479374745  489125902  892474351\n",
+      " 1772483286 1618059428 2112145768 1176931001 2130657127 1372702154\n",
+      " 1915186707  359001576 1354889186 1206588174 1703872743 1618570395\n",
+      "  276268849 2122558424 1562925289  149784721  284447308   71346555\n",
+      "  533918953   53131888  300813597 1997258268  429321187  513384974\n",
+      " 1561153509 1381283502 1278344079  819825689 1893981170 1871201135\n",
+      "  439776885  385666987 1276518196 1048275881  849310733  696136561\n",
+      "  253495413  111815035 2011582342  497089201  137984022  350005452\n",
+      "  122945185  279001202 1346294069  635086154  312104709 1038729394\n",
+      " 1035478331 1417321071 2016610431 1917966790 2085528429 1939032558\n",
+      "  409814011 2087305385  183367585  220846738 1401539893 1703638497\n",
+      "  540803776  424338246 1577693608 1008140946 1630810788 1483543420\n",
+      "  338307534  661009927 1869883449  513484558 1241126138 1400165152\n",
+      "  579374280 1853073142 1491732090  561032229 1666566070 1150325649\n",
+      " 1140131398  257346317 1240133338  333642051]\n",
+      "\n",
+      " Corresponde a = 1043502637.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "arr = np.array(np.random.randint(2147483647,size=100))\n",
+    "\n",
+    "print(f\"A mediana do array: \\n\\n{arr}\\n\\n Corresponde a = {np.median(arr)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2º Exercício\n",
+    "    Relembrar os exercícios com funções para cálculo de fatrial e soma de séries da Aula 02. Repetir os dois exercícios, mas agora utilizar as novas operações aprendidas com ndarrays."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### 2.1 Exercício\n",
+    "    Escrever função para calcular o fatorial de um número qualquer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fat (num):\n",
+    "    array_fat = np.array(np.arange(1,num+1))\n",
     "    soma = 1\n",
-    "    for i in range(1,num+1):\n",
+    "\n",
+    "    for i in array_fat:\n",
     "        soma*=i\n",
     "    return soma"
    ]
@@ -34,26 +102,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Testando função para o numero 4"
+    "    1. Testando função para o numero 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A função não funciona o resultado foi 1\n"
+      "Função funciona o fatorial de 0 = 1\n"
      ]
     }
    ],
    "source": [
     "testeUm = fat(0) \n",
-    "if testeUm == 0:\n",
-    "    print(f\"Função funciona o fatorial de 1 = {testeUm}\")\n",
+    "if testeUm == 1:\n",
+    "    print(f\"Função funciona o fatorial de 0 = {testeUm}\")\n",
     "else:\n",
     "    print(f\"A função não funciona o resultado foi {testeUm}\")"
    ]
@@ -62,12 +130,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Testando função para o número 8"
+    "    2. Testando função para o número 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -90,12 +158,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Testando função para o número 12"
+    "    3. Testando função para o número 12"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -118,34 +186,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2º Exercício\n",
+    "#### 2.2 Exercício\n",
     "Escrever uma função para calcular a soma de uma serie começando por um numero qualquer e terminando em outro numero que deve ser maior que o primeiro."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from array import array\n",
+    "\n",
     "def serie (inicial, final):\n",
     "    soma = 0\n",
-    "    i = inicial\n",
+    "    array_serie = np.arange(inicial,final+1)\n",
     "    \n",
-    "    while i <= final:\n",
-    "        soma += i\n",
-    "        i += 1\n",
-    "    return soma\n",
-    "\n",
-    "print(serie(2,6))"
+    "    for i in array_serie:\n",
+    "        soma+=i\n",
+    "    return soma"
    ]
   },
   {
@@ -159,14 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Função funciona o fatorial de 4 = 20\n"
+      "Função funciona a soma da serie 2...6 = 20\n"
      ]
     }
    ],
@@ -187,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
